# extended-precision-integers

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  TODO.md  config.hpp  epi.hpp  main.cpp  makefile  small_test.hpp  test.cpp
.github/workflows/: bench.yml  benchmark.yml  ctests.yml  tests.yml
TODO/: extended-floating-point.md  extended-signed-integers.md  extended-unsigned-integers.md
benchmark/: benchmark-and-comparison-Linux-clang++.md  benchmark.cpp  makefile
include/epi/: .clang-tidy  config.hpp  constants.hpp  core.hpp  epi.hpp  meta-functions.hpp
tests/: CMakeLists.txt  addition.cpp  bitwise-and.cpp  bitwise-not.cpp  bitwise-or.cpp  bitwise-xor.cpp  boolean.cpp  comp-info.cpp  constexpr_test.cpp  constructor-initializer-list.cpp  constructor-integral.cpp  constructor-string-view.cpp  decrement.cpp  division.cpp  increment.cpp  makefile  modulo.cpp  multiplication.cpp  relational.cpp  shifts.cpp  small_test.hpp  subtraction.cpp  template.cpp  test.cpp  test_perf.cpp  to-string-base10.cpp  to-string-base16.cpp  to-string-base2.cpp  to-string-base8.cpp
